Enhance website content and layout across multiple pages. Updated the About section with new images, text, and styles. Improved the Blog page with search and category sections. Revamped the Contact page for better user engagement. Enhanced product display and added new product sections. Removed unused animation styles and optimized JavaScript functionality for form handling and scrolling effects.

--- a/products.html
+++ b/products.html
@@ -249,17 +249,22 @@
         </div>
     </section>
 
-    <!-- Plant-Based Products Section -->
-    <section class="plant-based">
+    <!-- Featured Products Section -->
+    <section class="featured-products">
         <div class="container">
-            <h2 class="section-title">Plant-Based Products</h2>
-            <p class="section-subtitle">Innovative and delicious alternatives</p>
+            <h2 class="section-title">Featured Products</h2>
+            <p class="section-subtitle">Discover our best-selling items</p>
             <div class="product-grid">
                 <div class="product-card">
-                    <div class="product-image" style="background-image: url('images/tigernutflour.jpg');">
+                    <div class="product-image" style="background-image: url('images/tigernutdrink.jpg');">
+                        <div class="product-label">Best Seller</div>
                         <div class="product-overlay">
                             <div class="overlay-content">
                                 <a href="#" class="view-product">View Details</a>
+                                <div class="product-actions">
+                                    <button class="add-to-cart"><i class="fas fa-shopping-cart"></i></button>
+                                    <button class="add-to-wishlist"><i class="fas fa-heart"></i></button>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -281,11 +286,15 @@
                     </div>
                 </div>
                 <div class="product-card">
-                    <div class="product-image" style="background-image: url('images/tigernutflour.jpg');">
-                        <div class="product-label">New</div>
+                    <div class="product-image" style="background-image: url('images/tigernutdrink.jpg');">
+                        <div class="product-label">Sale</div>
                         <div class="product-overlay">
                             <div class="overlay-content">
                                 <a href="#" class="view-product">View Details</a>
+                                <div class="product-actions">
+                                    <button class="add-to-cart"><i class="fas fa-shopping-cart"></i></button>
+                                    <button class="add-to-wishlist"><i class="fas fa-heart"></i></button>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -307,10 +316,14 @@
                     </div>
                 </div>
                 <div class="product-card">
-                    <div class="product-image" style="background-image: url('images/tigernutflour.jpg');">
+                    <div class="product-image" style="background-image: url('images/tigernutdrink.jpg');">
                         <div class="product-overlay">
                             <div class="overlay-content">
                                 <a href="#" class="view-product">View Details</a>
+                                <div class="product-actions">
+                                    <button class="add-to-cart"><i class="fas fa-shopping-cart"></i></button>
+                                    <button class="add-to-wishlist"><i class="fas fa-heart"></i></button>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -329,6 +342,95 @@
                             <span class="price-amount">$6.49</span>
                             <button class="product-button">Learn More</button>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Plant-Based Products Section -->
+    <section class="plant-based">
+        <div class="container">
+            <h2 class="section-title">Plant-Based Products</h2>
+            <p class="section-subtitle">Innovative and delicious alternatives</p>
+            <div class="product-grid">
+                <div class="product-card">
+                    <div class="product-image" style="background-image: url('images/tigernutflour.jpg');">
+                        <div class="product-overlay">
+                            <div class="overlay-content">
+                                <a href="#" class="view-product">View Details</a>
+                                <div class="product-actions">
+                                    <button class="add-to-cart"><i class="fas fa-shopping-cart"></i></button>
+                                    <button class="add-to-wishlist"><i class="fas fa-heart"></i></button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product-info">
+                        <h3>Tiger Nut Milk</h3>
+                        <div class="rating">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                            <span>(4.5)</span>
+                        </div>
+                        <p>Rich, creamy plant-based milk alternative</p>
+                        <div class="price">$6.99</div>
+                    </div>
+                </div>
+                <div class="product-card">
+                    <div class="product-image" style="background-image: url('images/tigernutflour.jpg');">
+                        <div class="product-label">New</div>
+                        <div class="product-overlay">
+                            <div class="overlay-content">
+                                <a href="#" class="view-product">View Details</a>
+                                <div class="product-actions">
+                                    <button class="add-to-cart"><i class="fas fa-shopping-cart"></i></button>
+                                    <button class="add-to-wishlist"><i class="fas fa-heart"></i></button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product-info">
+                        <h3>Frozen Desserts</h3>
+                        <div class="rating">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <span>(5.0)</span>
+                        </div>
+                        <p>Delicious dairy-free ice cream alternative</p>
+                        <div class="price">$8.99</div>
+                    </div>
+                </div>
+                <div class="product-card">
+                    <div class="product-image" style="background-image: url('images/tigernutflour.jpg');">
+                        <div class="product-overlay">
+                            <div class="overlay-content">
+                                <a href="#" class="view-product">View Details</a>
+                                <div class="product-actions">
+                                    <button class="add-to-cart"><i class="fas fa-shopping-cart"></i></button>
+                                    <button class="add-to-wishlist"><i class="fas fa-heart"></i></button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product-info">
+                        <h3>Baked Goods</h3>
+                        <div class="rating">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="far fa-star"></i>
+                            <span>(4.0)</span>
+                        </div>
+                        <p>Nutrient-rich flour for delicious baking</p>
+                        <div class="price">$7.49</div>
                     </div>
                 </div>
             </div>
