Update product section in index.html with new product cards and descriptions. Enhance styles in styles.css for better layout and responsiveness, including background images for product cards. Remove unused impact-hero image file.

--- a/index.html
+++ b/index.html
@@ -73,27 +73,47 @@
     <!-- Products Section -->
     <section id="products" class="products">
         <h2>Our Products</h2>
+        <p class="section-subtitle">Ethically sourced from Ghana's Eastern Afram Plains</p>
         <div class="product-grid">
             <div class="product-card">
                 <div class="product-image">
-                    <!-- Image will be added via CSS -->
+                    <!-- Image added via CSS -->
                 </div>
-                <h3>Organic Cashews</h3>
-                <p>Premium quality cashews grown sustainably in Ghana</p>
+                <div class="product-info">
+                    <h3>Organic Cashews</h3>
+                    <p>Premium quality cashews grown sustainably in Ghana</p>
+                    <a href="products.html" class="cta-button">View Details</a>
+                </div>
             </div>
             <div class="product-card">
                 <div class="product-image">
-                    <!-- Image will be added via CSS -->
+                    <!-- Image added via CSS -->
                 </div>
-                <h3>Tiger Nuts</h3>
-                <p>Nutrient-rich tubers with numerous health benefits</p>
+                <div class="product-info">
+                    <h3>Tiger Nuts</h3>
+                    <p>Nutrient-rich tubers with numerous health benefits</p>
+                    <a href="products.html" class="cta-button">View Details</a>
+                </div>
             </div>
             <div class="product-card">
                 <div class="product-image">
-                    <!-- Image will be added via CSS -->
+                    <!-- Image added via CSS -->
                 </div>
-                <h3>Plant-Based Products</h3>
-                <p>Tiger nut milk, frozen desserts, and baked goods</p>
+                <div class="product-info">
+                    <h3>Plant-Based Products</h3>
+                    <p>Tiger nut milk, frozen desserts, and baked goods</p>
+                    <a href="products.html" class="cta-button">View Details</a>
+                </div>
+            </div>
+            <div class="product-card">
+                <div class="product-image">
+                    <!-- Image added via CSS -->
+                </div>
+                <div class="product-info">
+                    <h3>Dragon Fruit</h3>
+                    <p>Exotic superfruit grown with sustainable farming techniques</p>
+                    <a href="products.html" class="cta-button">View Details</a>
+                </div>
             </div>
         </div>
     </section>
