--- a/about.html
+++ b/about.html
@@ -17,12 +17,6 @@
             background-repeat: no-repeat;
         }
     </style>
-    <script>
-        // Add js-enabled class to body when JavaScript is running
-        document.addEventListener('DOMContentLoaded', function() {
-            document.body.classList.add('js-enabled');
-        });
-    </script>
 </head>
 <body>
     <!-- Navigation -->
@@ -38,7 +32,7 @@
             <a href="blog.html">Blog</a>
             <a href="contact.html">Contact</a>
         </div>
-        <div class="hamburger">
+        <div class="hamburger" aria-label="Menu" role="button" tabindex="0">
             <span></span>
             <span></span>
             <span></span>
@@ -173,18 +167,18 @@
                 <div class="mission-card">
                     <i class="fas fa-bullseye"></i>
                     <h3>Our Mission</h3>
-                    <p>To empower women and youth through sustainable farming practices, creating economic opportunities while preserving the environment for future generations.</p>
+                    <p>To empower women and youth through sustainable farming practices, creating economic opportunities while preserving the environment.</p>
                     <ul class="mission-points">
                         <li><i class="fas fa-check-circle"></i> Provide training in sustainable agriculture</li>
-                        <li><i class="fas fa-check-circle"></i> Create market access for small-scale farmers</li>
-                        <li><i class="fas fa-check-circle"></i> Implement environmentally-friendly practices</li>
-                        <li><i class="fas fa-check-circle"></i> Support women's economic empowerment</li>
+                        <li><i class="fas fa-check-circle"></i> Create market access for farmers</li>
+                        <li><i class="fas fa-check-circle"></i> Implement eco-friendly practices</li>
+                        <li><i class="fas fa-check-circle"></i> Support women's empowerment</li>
                     </ul>
                 </div>
                 <div class="vision-card">
                     <i class="fas fa-eye"></i>
                     <h3>Our Vision</h3>
-                    <p>To be a leading force in sustainable agriculture in Ghana, transforming rural communities through innovative farming practices and community development.</p>
+                    <p>To be a leading force in sustainable agriculture in Ghana, transforming rural communities through innovative farming practices.</p>
                     <div class="vision-image">
                         <img src="images/cashews.jpg" alt="Sustainable farming" style="width: 100%; border-radius: 8px; margin-top: 20px;">
                     </div>
@@ -274,7 +268,7 @@
                     <div class="member-info">
                         <h3>Rhoda Ogunu</h3>
                         <p class="member-title">Farm Manager</p>
-                        <p>With 10+ years of experience in agricultural management, Rhoda oversees all farming operations.</p>
+                        <p>With 10+ years in agricultural management, Rhoda oversees our farming operations.</p>
                         <div class="member-social">
                             <a href="#"><i class="fab fa-linkedin"></i></a>
                             <a href="#"><i class="fab fa-twitter"></i></a>
@@ -282,13 +276,11 @@
                     </div>
                 </div>
                 <div class="team-member">
-                    <div class="member-image" style="padding: 0; overflow: hidden;">
-                        <img src="images/Michael Akuamoah-Boateng.jpeg" alt="Michael Akuamoah-Boateng" style="width: 100%; height: 100%; object-fit: cover; object-position: top center;">
-                    </div>
+                    <div class="member-image" style="background-image: url('images/Michael%20Akuamoah-Boateng.jpeg'); background-position: top center;"></div>
                     <div class="member-info">
                         <h3>Michael Akuamoah-Boateng</h3>
                         <p class="member-title">Expert Horticulturist</p>
-                        <p>Michael brings specialized knowledge in plant cultivation and sustainable farming techniques to our agricultural operations.</p>
+                        <p>Michael brings specialized knowledge in sustainable farming techniques to our operations.</p>
                         <div class="member-social">
                             <a href="#"><i class="fab fa-linkedin"></i></a>
                             <a href="#"><i class="fab fa-twitter"></i></a>
@@ -383,6 +375,5 @@
     </footer>
 
     <script src="js/main.js"></script>
-    <script src="js/about.js"></script>
 </body>
 </html> 
