Update product history and coming soon sections in products.html and index.html. Added detailed cultural histories for cashews, tiger nuts, dragon fruit, and wambugu apples. Enhanced styles for the coming soon section and improved product card images. Updated JavaScript for better functionality in product history navigation and added "Learn More" buttons for product details.

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <!-- Image added via CSS -->
                 </div>
                 <div class="product-info">
-                    <h3>Plant-Based Products</h3>
+                    <h3>Plant-Based</h3>
                     <p>Tiger nut milk, frozen desserts, and baked goods</p>
                     <a href="products.html" class="cta-button">View Details</a>
                 </div>
