--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mosaic Grove - Sustainable Farming in Ghana</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/cart-styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
@@ -23,6 +24,16 @@
             <a href="impact.html">Impact</a>
             <a href="blog.html">Blog</a>
             <a href="contact.html">Contact</a>
+        </div>
+        <div class="nav-icons">
+            <div class="cart-icon">
+                <i class="fas fa-shopping-cart"></i>
+                <span class="cart-count">0</span>
+            </div>
+            <div class="wishlist-icon">
+                <i class="far fa-heart"></i>
+                <span class="wishlist-count">0</span>
+            </div>
         </div>
         <div class="hamburger">
             <span></span>
@@ -253,5 +264,6 @@
 
     <script src="js/main.js"></script>
     <script src="js/slideshow.js"></script>
+    <script src="js/cart.js"></script>
 </body>
 </html> 
