--- a/products.html
+++ b/products.html
@@ -6,6 +6,7 @@
     <title>Our Products - Mosaic Grove</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/product-styles.css">
+    <link rel="stylesheet" href="css/cart-styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
@@ -25,6 +26,16 @@
             <a href="blog.html">Blog</a>
             <a href="contact.html">Contact</a>
         </div>
+        <div class="nav-icons">
+            <div class="cart-icon">
+                <i class="fas fa-shopping-cart"></i>
+                <span class="cart-count">0</span>
+            </div>
+            <div class="wishlist-icon">
+                <i class="far fa-heart"></i>
+                <span class="wishlist-count">0</span>
+            </div>
+        </div>
         <div class="hamburger">
             <span></span>
             <span></span>
@@ -35,19 +46,48 @@
     <!-- Products Hero Section -->
     <section class="page-hero" style="background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('images/products-header.jpg') center/cover;">
         <div class="hero-content">
+            <span class="hero-badge">Premium Quality</span>
             <h1>Our Products</h1>
-            <p>Discover our range of organic and sustainable products</p>
-        </div>
-    </section>
+            <p class="hero-description">Discover our range of organic and sustainable products, carefully sourced from the heart of Ghana's Eastern Afram Plains. Each product embodies our commitment to quality, sustainability, and community impact.</p>
+            
+            <div class="hero-stats">
+                <div class="stat-item">
+                    <span class="stat-number">100%</span>
+                    <span class="stat-label">Organic</span>
+                </div>
+                <div class="stat-item">
+                    <span class="stat-number">500+</span>
+                    <span class="stat-label">Farmers</span>
+                </div>
+                <div class="stat-item">
+                    <span class="stat-number">4.9</span>
+                    <span class="stat-label">Rating</span>
+                </div>
+            </div>
 
-    <!-- Product Categories -->
-    <section class="product-categories">
-        <div class="container">
-            <div class="category-tabs">
-                <button class="category-tab active" data-category="all">All Products</button>
-                <button class="category-tab" data-category="cashews">Cashews</button>
-                <button class="category-tab" data-category="tiger-nuts">Tiger Nuts</button>
-                <button class="category-tab" data-category="plant-based">Plant-Based</button>
+            <div class="hero-filters">
+                <div class="filter-container">
+                    <button class="filter-btn active" data-category="all">
+                        <i class="fas fa-th-large"></i>
+                        All Products
+                    </button>
+                    <button class="filter-btn" data-category="cashews">
+                        <i class="fas fa-seedling"></i>
+                        Cashews
+                    </button>
+                    <button class="filter-btn" data-category="tiger-nuts">
+                        <i class="fas fa-leaf"></i>
+                        Tiger Nuts
+                    </button>
+                    <button class="filter-btn" data-category="plant-based">
+                        <i class="fas fa-spa"></i>
+                        Plant-Based
+                    </button>
+                </div>
+                <div class="search-container">
+                    <input type="text" placeholder="Search products..." class="product-search">
+                    <i class="fas fa-search search-icon"></i>
+                </div>
             </div>
         </div>
     </section>
@@ -86,12 +126,16 @@
                     <div class="product-pricing">
                         <div class="price">
                             <span class="regular-price">$12.99</span>
-                            <span class="sale-price">$9.99</span>
+                            <span class="sale-price price-amount">$9.99</span>
                             <span class="unit">/ 250g</span>
                         </div>
                         <div class="product-actions">
-                            <button class="add-to-cart-btn"><i class="fas fa-shopping-cart"></i> Add to Cart</button>
-                            <button class="wishlist-btn"><i class="far fa-heart"></i></button>
+                            <button class="add-to-cart-btn" data-product-name="Premium Organic Cashews" data-product-price="$9.99" data-product-image="images/cashews.jpg">
+                                <i class="fas fa-shopping-cart"></i> Add to Cart
+                            </button>
+                            <button class="wishlist-btn" data-product-name="Premium Organic Cashews" data-product-price="$9.99" data-product-image="images/cashews.jpg">
+                                <i class="far fa-heart"></i>
+                            </button>
                         </div>
                     </div>
                 </div>
@@ -136,7 +180,7 @@
                                 <button class="size-option">1kg</button>
                             </div>
                         </div>
-                        <button class="cta-button">Order Now</button>
+                        <a href="product-details.html?id=premium-organic-cashews" class="cta-button">Order Now</a>
                     </div>
                 </div>
             </div>
@@ -169,7 +213,7 @@
                                 <button class="size-option">1kg</button>
                             </div>
                         </div>
-                        <button class="cta-button">Order Now</button>
+                        <a href="product-details.html?id=tiger-nuts" class="cta-button">Order Now</a>
                     </div>
                     <div class="product-image" style="background-image: url('images/tiger.jpg');">
                         <div class="product-label new">New Harvest</div>
@@ -566,8 +610,8 @@
                             <div class="overlay-content">
                                 <a href="#" class="view-product">View Details</a>
                                 <div class="product-actions">
-                                    <button class="add-to-cart"><i class="fas fa-shopping-cart"></i></button>
-                                    <button class="add-to-wishlist"><i class="fas fa-heart"></i></button>
+                                    <button class="add-to-cart-btn">Add to Cart</button>
+                                    <button class="wishlist-btn"><i class="far fa-heart"></i></button>
                                 </div>
                             </div>
                         </div>
@@ -585,7 +629,7 @@
                         <p>A delicious, dairy-free alternative packed with nutrients</p>
                         <div class="product-price">
                             <span class="price-amount">$5.99</span>
-                            <button class="product-button">Learn More</button>
+                            <a href="product-details.html?id=tiger-nut-milk" class="product-button">Order Now</a>
                         </div>
                     </div>
                 </div>
@@ -596,8 +640,8 @@
                             <div class="overlay-content">
                                 <a href="#" class="view-product">View Details</a>
                                 <div class="product-actions">
-                                    <button class="add-to-cart"><i class="fas fa-shopping-cart"></i></button>
-                                    <button class="add-to-wishlist"><i class="fas fa-heart"></i></button>
+                                    <button class="add-to-cart-btn">Add to Cart</button>
+                                    <button class="wishlist-btn"><i class="far fa-heart"></i></button>
                                 </div>
                             </div>
                         </div>
@@ -615,7 +659,7 @@
                         <p>Healthy, plant-based frozen treats made with tiger nuts</p>
                         <div class="product-price">
                             <span class="price-amount">$7.99</span>
-                            <button class="product-button">Learn More</button>
+                            <a href="product-details.html?id=frozen-desserts" class="product-button">Order Now</a>
                         </div>
                     </div>
                 </div>
@@ -625,8 +669,8 @@
                             <div class="overlay-content">
                                 <a href="#" class="view-product">View Details</a>
                                 <div class="product-actions">
-                                    <button class="add-to-cart"><i class="fas fa-shopping-cart"></i></button>
-                                    <button class="add-to-wishlist"><i class="fas fa-heart"></i></button>
+                                    <button class="add-to-cart-btn">Add to Cart</button>
+                                    <button class="wishlist-btn"><i class="far fa-heart"></i></button>
                                 </div>
                             </div>
                         </div>
@@ -644,7 +688,7 @@
                         <p>Delicious baked products using tiger nut flour</p>
                         <div class="product-price">
                             <span class="price-amount">$6.49</span>
-                            <button class="product-button">Learn More</button>
+                            <a href="product-details.html?id=baked-goods" class="product-button">Order Now</a>
                         </div>
                     </div>
                 </div>
@@ -664,8 +708,8 @@
                             <div class="overlay-content">
                                 <a href="#" class="view-product">View Details</a>
                                 <div class="product-actions">
-                                    <button class="add-to-cart"><i class="fas fa-shopping-cart"></i></button>
-                                    <button class="add-to-wishlist"><i class="fas fa-heart"></i></button>
+                                    <button class="add-to-cart-btn">Add to Cart</button>
+                                    <button class="wishlist-btn"><i class="far fa-heart"></i></button>
                                 </div>
                             </div>
                         </div>
@@ -692,8 +736,8 @@
                             <div class="overlay-content">
                                 <a href="#" class="view-product">View Details</a>
                                 <div class="product-actions">
-                                    <button class="add-to-cart"><i class="fas fa-shopping-cart"></i></button>
-                                    <button class="add-to-wishlist"><i class="fas fa-heart"></i></button>
+                                    <button class="add-to-cart-btn">Add to Cart</button>
+                                    <button class="wishlist-btn"><i class="far fa-heart"></i></button>
                                 </div>
                             </div>
                         </div>
@@ -719,8 +763,8 @@
                             <div class="overlay-content">
                                 <a href="#" class="view-product">View Details</a>
                                 <div class="product-actions">
-                                    <button class="add-to-cart"><i class="fas fa-shopping-cart"></i></button>
-                                    <button class="add-to-wishlist"><i class="fas fa-heart"></i></button>
+                                    <button class="add-to-cart-btn">Add to Cart</button>
+                                    <button class="wishlist-btn"><i class="far fa-heart"></i></button>
                                 </div>
                             </div>
                         </div>
@@ -951,5 +995,6 @@
     <script src="js/main.js"></script>
     <script src="js/products.js"></script>
     <script src="js/countdown.js"></script>
+    <script src="js/cart.js"></script>
 </body>
 </html> 
